experiments/time-complexity/deployment_S.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-s
  namespace: test
  labels:
    Skey1: Svalue1
    Skey2: Svalue2
    Skey3: Svalue3
spec:
  replicas: 1
  selector:
    matchLabels:
      Skey1: Svalue1
      Skey2: Svalue2
      Skey3: Svalue3
  template:
    metadata:
      labels:
        Skey1: Svalue1
        Skey2: Svalue2
        Skey3: Svalue3
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: Skey1
                    operator: In
                    values:
                      - Svalue1
                  - key: Skey2
                    operator: In
                    values:
                      - Svalue2
                  - key: Skey3
                    operator: In
                    values:
                      - Svalue3
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: alpine
        image: alpine:latest
        command:
          - /bin/sh
          - "-c"
          - "sleep 60m"
        imagePullPolicy: IfNotPresent
        name: alpine
