experiments/time-complexity/networkPolicy_V.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-v
  namespace: test
spec:
  podSelector:
    matchLabels:
      Vkey1: Vvalue1
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          Skey1: Svalue1
          Skey2: Svalue2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          Skey1: Svalue1
          Skey2: Svalue2
